psa-cel/add-psa-namespace-reporting/.kyverno-test/namespace-with-psa-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
      pod-security.kubernetes.io/enforce: "privileged"
