psa-cel/add-psa-namespace-reporting/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-psa-namespace-reporting-tests
policies:
- ../add-psa-namespace-reporting.yaml
resources:
- namespace-with-psa-labels.yaml
- namespace-without-psa-labels.yaml
results:
  - kind: Namespace
    policy: add-psa-namespace-reporting
    resources: 
    - test
    rule: check-namespace-labels
    result: pass
  - kind: Namespace
    policy: add-psa-namespace-reporting
    resources: 
    - test-fail
    rule: check-namespace-labels
    result: fail
